insert data table

--- a/head.html
+++ b/head.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Les feuilles de style -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-
-
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 <link rel="stylesheet" href="assets/css/bootstrap-materia.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
+
+
 
     <title>Visor</title>
 </head>
