--- a/top-menu.html
+++ b/top-menu.html
@@ -11,7 +11,7 @@
         <span class="txt-org b">Flux d'actualité  </span>       
   </div>
     <div class="col-lg-2">
-        <img class="icon" src="assets/icons/synoptique.png" alt="image no valide">
+        <img class="icon" src="assets/icons/synoptique.svg" alt="image no valide">
         <span class="txt b">Synoptiaue  </span>       
   </div>
     <div class="col-lg-2">
