change all .png to .svg , and set menu_items color

--- a/head.html
+++ b/head.html
@@ -16,5 +16,14 @@
 
     <title>Visor</title>
 </head>
+<script>
+    /**
+        this variable is to set the index of menu_top_item in order to set its color to orange,
+        it shall be redefined in script of each page.
+        (stars in 0)
+    */
+    var index_menu;
+
+</script>
 <body>
     
