--- a/top-menu.html
+++ b/top-menu.html
@@ -3,33 +3,33 @@
 
   
     <div class="col-lg-1"> 
-      <img src="assets/icons/one.png" alt="image no valide">
+      <img src="assets/icons/one.svg" alt="image no valide">
     </div>
     <div class="col-lg-2">
 
-        <img class="icon" src="assets/icons/list.png" alt="image no valide">
-        <span class="txt-org b">Flux d'actualité  </span>       
+        <img class="icon" src="assets/icons/list.svg" alt="image no valide">
+        <span class="txt b">Flux d'actualité  </span>       
   </div>
     <div class="col-lg-2">
         <img class="icon" src="assets/icons/synoptique.svg" alt="image no valide">
         <span class="txt b">Synoptiaue  </span>       
   </div>
     <div class="col-lg-2">
-        <img class="icon" src="assets/icons/multiuser.png" alt="image no valide">
+        <img class="icon" src="assets/icons/multiuser.svg" alt="image no valide">
         <span class="txt b">Groupes & Utilisateurs  </span>       
   </div>
     <div class="col-lg-2">
-        <img class="icon" src="assets/icons/calendar.png" alt="image no valide">
+        <img class="icon" src="assets/icons/calendar.svg" alt="image no valide">
         <span class="txt b">Planification  </span>       
   </div>
     <div class="col-lg-2">
-        <img class="icon" src="assets/icons/seeting.png" alt="image no valide">
+        <img class="icon" src="assets/icons/seeting.svg" alt="image no valide">
         <span class="txt b">Paramètres </span>       
   </div>
     <div class="col-lg-2"> 
         <div class="my-input-group">
           
-           <img src="assets/icons/loop.png" alt="">
+           <img src="assets/icons/loop.svg" alt="">
             <!--<i class="fas fa-search"></i>-->
 
             <input  type="text" placeholder="alooo" class="form-control ronded">
