menu top responsive

--- a/top-menu.html
+++ b/top-menu.html
@@ -1,43 +1,68 @@
-<nav class="navbar navbar-expand-lg  bg-dark">
-  <div class="row full-width">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <img src="assets/icons/mob-menu.svg" alt="image no valide">
+  </button>
+
+<div class="navbar-toggler">
+    Flux d'actualité
+</div>
+  <div class="navbar-toggler hidden-lg-up">
+	Modifier
+</div>
+
+ 
 
   
-    <div class="col-lg-1"> 
-      <img src="assets/icons/one.svg" alt="image no valide">
-    </div>
-    <div class="col-lg-2">
 
-        <img class="icon" src="assets/icons/list.svg" alt="image no valide">
-        <span class="txt b">Flux d'actualité  </span>       
-  </div>
-    <div class="col-lg-2">
-        <img class="icon" src="assets/icons/synoptique.svg" alt="image no valide">
-        <span class="txt b">Synoptiaue  </span>       
-  </div>
-    <div class="col-lg-2">
-        <img class="icon" src="assets/icons/multiuser.svg" alt="image no valide">
-        <span class="txt b">Groupes & Utilisateurs  </span>       
-  </div>
-    <div class="col-lg-2">
-        <img class="icon" src="assets/icons/calendar.svg" alt="image no valide">
-        <span class="txt b">Planification  </span>       
-  </div>
-    <div class="col-lg-2">
-        <img class="icon" src="assets/icons/seeting.svg" alt="image no valide">
-        <span class="txt b">Paramètres </span>       
-  </div>
-    <div class="col-lg-2"> 
-        <div class="my-input-group">
-          
-           <img src="assets/icons/loop.svg" alt="">
-            <!--<i class="fas fa-search"></i>-->
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+              <img src="assets/icons/one.svg" alt="image no valide">
+        </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+            <img class="icon" src="assets/icons/list.svg" alt="image no valide">
+            <span class="txt b">Flux d'actualité  </span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+            <img class="icon" src="assets/icons/synoptique.svg" alt="image no valide">
+            <span class="txt b">Synoptiaue  </span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+            <img class="icon" src="assets/icons/multiuser.svg" alt="image no valide">
+            <span class="txt b">Groupes & Utilisateurs  </span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+            <img class="icon" src="assets/icons/calendar.svg" alt="image no valide">
+            <span class="txt b">Planification  </span>  
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+            <img class="icon" src="assets/icons/seeting.svg" alt="image no valide">
+            <span class="txt b">Paramètres </span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link my-input-group_" href="#">
+                <input  type="text" placeholder="Rechercher" class="form-control search-rond">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+            Sophie Hones
+        </a>
+      </li>
 
-            <input  type="text" placeholder="alooo" class="form-control ronded">
-          </div>
-    </div>
-    <div class="col-lg-2">
-        <span>Sophie Hones</span>
-    </div>
-
+    </ul>
+    
   </div>
-  </nav>
+</nav>
