data table styling

--- a/head.html
+++ b/head.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 
     <!-- Les feuilles de style -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
+
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 <link rel="stylesheet" href="assets/css/bootstrap-materia.min.css">
+<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+
 <link rel="stylesheet" href="assets/css/style.css">
+
+
+
 <link rel="shortcut icon" href="assets/icons/one.png" type="image/x-icon">
 
 
