--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,9 @@
 
 <!-- Les script javasript -->
 <script src="assets/js/jquery-3.3.1.js"></script>
-<script src="assets/js/jquery.dataTables.min.js"></script>
 
+<script src="assets/js/jquery.dataTables.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/js/script.js"></script>
 
 
@@ -10,12 +11,18 @@
 <script>
 
 $(document).ready(function() {
-    $('#example').DataTable();
+    $('#example').DataTable({
+    paging: false,
+    searching: false
+});
 } );
 
 
 $('.navbar .col-lg-2').find("img")[index_menu].setAttribute('class',"icon orange-icon");
 $('.navbar .col-lg-2').find("span")[index_menu].setAttribute('class',"txt-org b");
+
+
+
 
 </script>
 </body>
