--- a/head.html
+++ b/head.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
 <link rel="stylesheet" href="assets/css/bootstrap-materia.min.css">
-<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets/css/font-awesome-4.7.css">
 
 <link rel="stylesheet" href="assets/css/style.css">
 
