Ajout de la page groupe Ajout de la feuille de style style-costum.css pour separer les classe et les detecter facilement Ajout des links dans le head

--- a/head.html
+++ b/head.html
@@ -12,6 +12,8 @@
 <link rel="stylesheet" href="assets/css/bootstrap-materia.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="shortcut icon" href="assets/icons/one.png" type="image/x-icon">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<link rel="stylesheet" href="assets/css/style-costum.css">
 
 
     <title>Visor</title>
