sideBar right affiche on tablet mode

--- a/head.html
+++ b/head.html
@@ -8,16 +8,22 @@
 
     <!-- Les feuilles de style -->
 
+
+
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-<link rel="stylesheet" href="assets/css/bootstrap-materia.min.css">
-<link rel="stylesheet" href="assets/css/font-awesome-4.7.css">
+            <link rel="stylesheet" href="assets/css/bootstrap-materia.css">
+    <!--<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">-->
 
-<link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/font-awesome-4.7.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 
-<link rel="shortcut icon" href="assets/icons/one.png" type="image/x-icon">
+
+    <link rel="shortcut icon" href="assets/icons/one.png" type="image/x-icon">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<link rel="stylesheet" href="assets/css/style-costum.css">
 
 
     <title>Visor</title>
@@ -31,5 +37,5 @@
     var index_menu;
 
 </script>
-<body>
+<body id="main">
     
