--- a/modal.nouvelleRequette.html
+++ b/modal.nouvelleRequette.html
@@ -11,12 +11,85 @@
             <div class="modal-body">
                     <input class="form-control form-control-lg" type="text" placeholder=".form-control-lg" id="inputLarge">
 
+                <style>
+        input  {
+            color: white;
+        }
+                    .btn-select, btn-select:focus {
+                        color: white;
+                        padding:6px;
+                        width:100%;
+                        border-radius:2px;
+                        background-color:transparent;
+                        border: none;
+                        border-bottom: solid 2px var(--orange-1);
+                        text-align:left;position:relative;
+                        outline: none;
+                    }
 
+                    .btn-select:after {
+                        content:"";
+                        display: block;
+                        position:absolute;
+                        top:50%;
+                        right:10px;
+                        margin-top:-2px;
+                        width: 0;
+                        height: 0;
+                        border-top: 4px solid orange;
+                        border-right: 4px solid transparent;
+                        border-left: 4px solid transparent;
+                    }
+
+                    .dropdown-menu-select {
+                        padding:0;
+                        margin-top:-2px;
+                        width:100%;
+                        border-radius:0 0 2px 2px;
+                        border-color:#777;
+                    }
+
+                    .dropdown-radio {
+                        display:block;
+                        position:relative;
+                        margin:0;
+                        width:100%;
+                        overflow:hidden;
+                        text-overflow:ellipsis;
+                        border-bottom:1px solid #eaeaea;
+                        cursor:pointer;
+                    }
+                    .dropdown-radio input {
+                        visibility: hidden;
+                        position:absolute;
+                        left: -30px;
+                    }
+                    .dropdown-radio i {
+                        font-weight:normal;
+                        font-style:normal;
+                        display:block;
+                        padding:7px;
+                    }
+                    .dropdown-radio i:hover {
+                        background-color: gray;
+                        color: white;
+                    }
+                </style>
                 <div class="dropdown">
-                    <button type="button"
+                    <button
                             class=" btn-select"
                             data-toggle="dropdown">Alpha</button>
                     <ul class="dropdown-menu dropdown-menu-select">
+                            <div class="form-group">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input" checked="">
+                                    <label class="custom-control-label" for="customRadio1">Toggle this custom radio</label>
+                                </div>
+
+                            </div>
+
+
+
                         <li><label class="dropdown-radio">
                             <input type="radio" value="001" name="alphabet">
                             <i>Alpha</i>
@@ -35,58 +108,6 @@
                     </ul>
                 </div>
 
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#profile">Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 35px, 0px);">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </li>
-                </ul>
-                <div id="myTabContent" class="tab-content">
-                    <div class="tab-pane fade show active" id="home">
-                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-                    </div>
-                    <div class="tab-pane fade" id="profile">
-                        <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-                    </div>
-                    <div class="tab-pane fade" id="dropdown1">
-                        <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
-                    </div>
-                    <div class="tab-pane fade" id="dropdown2">
-                        <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
-                    </div>
-                </div>
-
-                <script>
-                  /*  $('.dropdown-radio').find('input').change(function() {
-                    var dropdown = $(this).closest('.dropdown');
-                    var radioname = $(this).attr('name');
-                    var checked = 'input[name=' + radioname + ']:checked';
-
-                    //update the text
-                    var checkedtext = $(checked).closest('.dropdown-radio').text();
-                    dropdown.find('button').text( checkedtext );
-
-                    //retrieve the checked value, if needed in page
-                    var thisvalue = dropdown.find( checked ).val();
-                    alert ( thisvalue  );
-                    });
-*/
-                </script>
 
                 <!--<select name="affichage" class="form-control" id="aff">-->
                     <!--<option value="" disabled selected> Affichage</option>-->
@@ -141,4 +162,37 @@
               box-shadow: red;
               outline: red;
           }
-      </style>  
+      </style>
+<script>
+    $('.dropdown-radio').find('input').change(function() {
+        var dropdown = $(this).closest('.dropdown');
+        var radioname = $(this).attr('name');
+        var checked = 'input[name=' + radioname + ']:checked';
+
+        //update the text
+        var checkedtext = $(checked).closest('.dropdown-radio').text();
+        dropdown.find('button').text( checkedtext );
+
+        //retrieve the checked value, if needed in page
+        var thisvalue = dropdown.find( checked ).val();
+        alert ( thisvalue  );
+    });
+
+    /*
+
+    //If IE8 support is required, add this inside your own IE8 conditional:
+    //See: http://www.paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
+
+        //Prevent ie8 from closing the dropdown before clicking the checkbox
+        $('.dropdown-radio').click( function( event ) {
+            event.stopImmediatePropagation();
+        })
+        $(document).on('change', '.dropdown-radio input', function(){
+            dropdownRadio();  //all the same functions as above
+            $('.dropdown-menu').dropdown('toggle');
+        })
+
+        */
+
+
+</script>
