--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,6 @@
 
 <!-- Les script javasript -->
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
-
 <script src="assets/js/jquery.dataTables.min.js"></script>
 
 
@@ -21,7 +15,9 @@ $(document).ready(function() {
 } );
 
 
-//$('.navbar .col-lg-2').find("img")[index_menu].setAttribute('class',"icon orange-icon");
+//$('.navbar').find(".nav-item")[index_menu].addCladd('active');
+$('.navbar').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
+
 //$('.navbar .col-lg-2').find("span")[index_menu].setAttribute('class',"txt-org b");
 
 
