--- a/top-menu.html
+++ b/top-menu.html
@@ -1,33 +1,44 @@
 <style>
-    *{
+    <!-- durée de l animation sauf les panel-toggle pour ne pas les ecraser-->
+    *:not('#panel'){
         transition: all ease 0.3s;
+        font-size: 11pt;
     }
 
     .sidenav {
-        /*height: 100%;*/
+        min-height: 100%;
         width: 0;
         position: fixed;
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: #111;
+        box-shadow: 2px 4px 9px var(--gray-dark);
+        background-color: var(--gray-3);
         overflow-x: hidden;
         transition: 0.5s;
-        padding-top: 60px;
+        /*padding: 11pt;*/
     }
+.larg-icon{
+    height: 59pt;
+    padding: 13pt;
+    width: 83pt;
+    margin: auto;
+}
 
 
-    @media screen and (max-height: 450px) {
-        .sidenav {padding-top: 15px;}
-    }
 </style>
 <!-- MENU SIDEBAR ->  mode tablete -->
 <div id="mySidenav" class="sidenav  hidden-lg tablete-mode">
 
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <img src="assets/icons/one.svg" alt="image no valide">
-        </li>
+
+            <img src="assets/images/logo.png" alt="image no valide" class="larg-icon">
+
+        <div class="search">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <input class="ronded-input" type="text" placeholder="Rechercher" name="recherche_inner" id="">
+        </div>
+
         <li class="nav-item active">
             <a class="nav-link" href="actualite.php">
                 <img class="icon" src="assets/icons/list.svg" alt="image no valide">
@@ -41,7 +52,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="GroupesUtilisateurs.php">
                 <img class="icon" src="assets/icons/multiuser.svg" alt="image no valide">
                 <span class="txt b">Groupes & Utilisateurs  </span>
             </a>
@@ -58,15 +69,11 @@
                 <span class="txt b">Paramètres </span>
             </a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link my-input-group_" href="#">
-                <input  type="text" placeholder="Rechercher" class="form-control search-rond">
-            </a>
-        </li>
+
         <li class="nav-item">
             <a class="nav-link" href="#">
                 <div class="img-fill " style="background-image: url('assets/images/pic.jpg'); "></div>
-                Sophie Hones
+                <span class="txt">Sophie Hones</span>
             </a>
         </li>
 
@@ -77,7 +84,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   
-<button class="navbar-toggler" onclick="tNav()" type="button" data-toggle="collapse1" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+<button style="height: 39pt;"
+        class="navbar-toggler" onclick="tNav()" type="button" data-toggle="collapse1" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <img src="assets/icons/mob-menu.svg" alt="image no valide">
   </button>
 
@@ -94,10 +102,10 @@
 
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li class="nav-item logo-home">
               <img src="assets/icons/one.svg" alt="image no valide">
         </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="actualite.php">
             <img class="icon" src="assets/icons/list.svg" alt="image no valide">
             <span class="txt b">Flux d'actualité  </span>
@@ -110,7 +118,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="GroupesUtilisateurs.php">
             <img class="icon" src="assets/icons/multiuser.svg" alt="image no valide">
             <span class="txt b">Groupes & Utilisateurs  </span>
         </a>
@@ -145,21 +153,20 @@
 
 
 <script>
-    // Fonction exécutée au redimensionnement
-    function redimensionnement() {
-        if("matchMedia" in window) { // Détection
-            if(window.matchMedia("(min-width:990px)").matches) {
-               closeNav();
-                navopen = !navopen;
-            } else {
 
+    // Fonction exécutée au redimensionnement
+     function redimensionnement() {
+        //if("matchMedia" in window) { // Détection
+            if(window.matchMedia("(min-width:990px)").matches) {
+                closeNav();
+                navopen = !navopen;
             }
-        }
+        //}
     }
     // On lie l'événement resize à la fonction
     window.addEventListener('resize', redimensionnement, false);
 
-    var navopen=false;
+    var navopen = false;
     function tNav(){
         if(!navopen) open();
         else closeNav();
