--- a/head.html
+++ b/head.html
@@ -35,9 +35,9 @@
 </head>
 <script>
     /**
-        this variable is to set the index of menu_top_item in order to set its color to orange,
+        @param index_menu : this variable is to set the index of menu_top_item in order to set its color to orange,
         it shall be redefined in script of each page.
-        (stars in 0)
+        (stars in 1)
     */
     var index_menu;
 
