--- a/footer.html
+++ b/footer.html
@@ -17,6 +17,7 @@ $(document).ready(function() {
 
 //$('.navbar').find(".nav-item")[index_menu].addCladd('active');
 $('.navbar').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
+$('.menu-item').find("a")[index_left_menu].setAttribute('class',"active");
 
 //$('.navbar .col-lg-2').find("span")[index_menu].setAttribute('class',"txt-org b");
 
