--- a/top-menu.html
+++ b/top-menu.html
@@ -89,8 +89,8 @@
         <img src="assets/icons/mob-menu.svg" alt="image no valide">
   </button>
 
-<div class="navbar-toggler">
-    Flux d'actualité
+<div id="titre" class="navbar-toggler">
+    
 </div>
   <div class="navbar-toggler hidden-lg-up">
 	Modifier
