--- a/footer.html
+++ b/footer.html
@@ -17,7 +17,10 @@ $(document).ready(function() {
 
 //$('.navbar').find(".nav-item")[index_menu].addCladd('active');
 $('.navbar').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
+$('.menu-item').find("a")[index_left_menu].setAttribute('class',"active");
 
+var titres = ["Flux d'actualité","Synoptique","Groupes & Utilisateurs","planniification","paramètres"];
+document.getElementById('titre').innerText = titres[index_menu - 1];
 //$('.navbar .col-lg-2').find("span")[index_menu].setAttribute('class',"txt-org b");
 
 
