sidebar items dynamic

--- a/footer.html
+++ b/footer.html
@@ -16,6 +16,7 @@ $(document).ready(function() {
 
 
 $('.navbar').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
+$('.sidenav').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
 $('.menu-item').find("a")[index_left_menu].setAttribute('class',"active");
 
 var titres = ["Flux d'actualité","Synoptique","Groupes & Utilisateurs","planniification","paramètres"];
