--- a/top-menu.html
+++ b/top-menu.html
@@ -39,7 +39,7 @@
             <input class="ronded-input" type="text" placeholder="Rechercher" name="recherche_inner" id="">
         </div>
 
-        <li class="nav-item active">
+        <li class="nav-item ">
             <a class="nav-link" href="actualite.php">
                 <img class="icon" src="assets/icons/list.svg" alt="image no valide">
                 <span class="txt b">Flux d'actualité  </span>
