dynamic circled items

--- a/footer.html
+++ b/footer.html
@@ -12,15 +12,33 @@ $(document).ready(function() {
     paging: false,
     searching: false
 });
-} );
+
 
 
 $('.navbar').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
-$('.sidenav').find(".nav-item")[index_menu].setAttribute('class',"nav-item active");
-$('.menu-item').find("a")[index_left_menu].setAttribute('class',"active");
+$('.sidenav').find(".nav-item")[index_menu-1].setAttribute('class',"nav-item active");
+
+
 
 var titres = ["Flux d'actualité","Synoptique","Groupes & Utilisateurs","planniification","paramètres"];
 document.getElementById('titre').innerText = titres[index_menu - 1];
+
+var items = document.getElementsByClassName('circled');
+var i=0;
+var l;
+//console.log(items);
+for(i=0; i<items.length; i++){
+l = items[i].innerText.length;
+
+if(l==2) items[i].style.padding='6px 5pt';
+else if(l==3) items[i].style.padding='7px 2pt';
+
+    console.log(" length : "+items[i].innerText.length);
+}
+
+} );
+
+
 
 
 
